--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,47 @@
+import org.gradle.api.internal.tasks.options.PropertySetter
+
 plugins {
+    id 'pmd'
     id 'java'
+    id 'org.springframework.boot' version '3.0.4'
+    id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group 'org.factory'
-version '1.0-SNAPSHOT'
+ext {
+    set('apacheCommonsLangVersion', '3.12.0')
+    set('jetbrainsAnnotationsVersion', '23.1.0')
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    // spring
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework:spring-jdbc'
+
+    // db
+    runtimeOnly 'org.postgresql:postgresql'
+
+    // utils
+    compileOnly "org.jetbrains:annotations:${jetbrainsAnnotationsVersion}"
+    implementation "org.apache.commons:commons-lang3:${apacheCommonsLangVersion}"
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+    // lombok
+    compileOnly 'org.projectlombok:lombok'
+
+    // tests
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testCompileOnly "org.projectlombok:lombok"
+    testAnnotationProcessor "org.projectlombok:lombok"
+
+    // annotation processor
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    annotationProcessor 'org.projectlombok:lombok'
+
 }
 
 test {
